# sipin-pg-webhook-events-dispatcher

./: .copier-answers.yml  .env.example  .gitignore  Dockerfile  README.md  config.yml  main.py  pyproject.toml
.openshift/: Jenkinsfile  sipin-pg-webhook-events-dispatcher-multibranch-pipeline.xml  sipin-pg-webhook-events-dispatcher-template.yml
app/: app.py
app/helpers/: svix_router.py
app/services/: db.py  svix.py
